# dbus-example

./: CMakeLists.txt  README.md
memfd/: CMakeLists.txt
memfd/src/: client.cpp  client.h  common.h  main.cpp  server.cpp  server.h
qtdbus/: CMakeLists.txt
qtdbus/src/: client.cpp  client.h  main.cpp  server.cpp  server.h
sdbus/: CMakeLists.txt
sdbus/src/: client.c  client.h  common.h  main.c  server.c
